--- a/src/app/navegacao/menu/menu.component.html
+++ b/src/app/navegacao/menu/menu.component.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" [routerLink]="['/contato']">Contato</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Feautures</a>
+                    <a class="nav-link" [routerLink]="['/feature-data-binding']">Feautures</a>
                 </li>
             </ul>
         </div>
