--- a/src/app/produtos/lista-produto/lista-produto.component.html
+++ b/src/app/produtos/lista-produto/lista-produto.component.html
@@ -7,11 +7,26 @@
                         <img src="./assets/{{produto.imagem}}" height="164px" width="253px">
                     </div>
                 </a>
-                <div class="card-body">
-                    <h4 class="card-title"> {{produto.nome}}</h4>
-                    <p>Por Apenas:</p>
-                    <div><h4> R$ {{produto.valor}}</h4></div>
+                <h4 class="card-title"> {{produto.nome | titlecase}}</h4>
+                
+                <div [ngSwitch]="produto.promocao">
+                    <p *ngSwitchCase="true"> Promoção! </p>
+                    <p *ngSwitchCase="false">Por Apenas:</p>
                 </div>
+
+                <div *ngIf="!produto.promocao" class="card-body">
+                    <div><h4>{{produto.valor | currency: 'BRL': 'symbol': '1.1-2': 'pt'}}</h4></div>
+                </div>
+
+                <div *ngIf="produto.promocao" class="card-body">
+                    <div> 
+                        <h4 class="card-text">
+                            De: <small><del>{{produto.valor | currency: 'BRL': 'symbol': '1.1-2': 'pt'}}</del></small><br>
+                            Por : {{ produto.valorPromo| currency: 'BRL': 'symbol': '1.1-2': 'pt' }}
+                        </h4>
+                    </div>
+                </div>
+
                 <div class="card-footer">
                     <a class="btn btn-primary">
                         <span class="fa fa-shopping-cart"> Comprar </span>
